# kingpol

./: .gitignore  .pre-commit-config.yaml  CODEBOOK.md  LICENSE  Makefile  README.md  dvc.yaml  environment.yaml  params.yaml  pyproject.toml
data/aux/: corrections.ods  corrections.xlsx  merging.ods  merging.xlsx  prices.ods  prices.xlsx  properties.ods  properties.xlsx
data/proc/: .gitignore
data/raw/: .gitignore  companies.tsv.gz.dvc  entities.tsv.gz.dvc  properties.tsv.gz.dvc  relations.tsv.gz.dvc
kingpol/: __about__.py  __init__.py  config.py  excel.py  outliers.py  plots.py  ranking.py  stats.py  strings.py
kingpol/dataset/: __init__.py  aux.py  paths.py  proc.py  raw.py  utils.py
kingpol/dataset/fields/: __init__.py  companies.py  core.py  entities.py  properties.py  ranking.py  relations.py
kingpol/dataset/models/: __init__.py  companies.py  conversions.py  currencies.py  entities.py  groups.py  prices.py  properties.py  ranking.py  records.py  relations.py  shares.py  yearly.py
scripts/: make_codebook.py  make_companies.py  make_entities.py  make_groups.py  make_kingpol.py  make_prices.py  make_properties.py  make_ranking.py  make_readme.py  make_records.py  make_relations.py  make_shares.py  make_tables.py  make_yearly.py
templates/: README.md
